# minecraft-java-rs-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: launch.rs
skills/minecraft-java-rs-integration/: SKILL.md
src/: error.rs  lib.rs
src/game/: arguments.rs  assets.rs  bundle.rs  java.rs  libraries.rs  lwjgl_native.rs  mod.rs  version.rs
src/launcher/: events.rs  game_data.rs  mod.rs  options.rs
src/loader/: fabric.rs  forge.rs  forge_patcher.rs  mod.rs  neoforge.rs  quilt.rs  types.rs
src/models/: java.rs  loader.rs  minecraft.rs  mod.rs
src/net/: check.rs  client.rs  downloader.rs  http.rs  mod.rs
src/utils/: archive.rs  auth.rs  hash.rs  mod.rs  paths.rs  platform.rs  version_check.rs
tests/: integration.rs
