[package]
name = "minecraft-java-rs-core"
version = "0.1.1"
edition = "2021"
description = "Core library for launching Minecraft Java Edition"
repository = "https://github.com/fitzxel/minecraft-java-rs-core"
license = "MIT"
keywords = ["minecraft", "launcher", "java", "client", "core"]
categories = ["games"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Async traits
async-trait = "0.1"

# Archives
zip = "2"
tar = "0.4"
flate2 = "1"

# Checksums
sha1 = { version = "0.10", features = ["std"] }
md-5 = "0.10"
sha2 = { version = "0.10", features = ["std"] }

# Utilities
semver = "1"
walkdir = "2"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
